re PR target/23360 (-ffast-math startup broken on i686 (maybe Athlon-xp))

2005-08-14  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/23360
	* config/i386/crtfastmath.c (set_fast_math): Check if DAZ is
	available for setting it.

From-SVN: r103078